# Hackathon

./: .env.example  .gitignore  .mcp.json.example  .venv  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
configs/: id_map.json
data/labels/: clips_manifest.json
data/schemas/: detector_count.schema.json  incident_event.schema.json  signal_event.schema.json
docs/: TEAM.md  cost-analysis-traffic-apis.md
evaluation/: hackathon-evaluation-2026-04-29.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
mobile/: .gitignore  app.json  package.json
mobile/app/: _layout.tsx  index.tsx
models/: forecast_lgb.json  forecast_metrics.json
phase1-sandbox/: README.md  data_dictionary.md  ground_truth.md  methodology.md
phase1-sandbox/configs/: gmaps_routes.yml  phase_plan.yml  profiles.yml  sources.yml  veo3_prompts.md
phase1-sandbox/docs/: intel_and_panel_analysis.md  research_sim_to_real.md
phase1-sandbox/experiments/: 01_extract_wadisaqra_frames.py  02_segment_and_inpaint.py  03_sumo_scenario.py  04_compose_synthetic_video.py  05_generate_event_clips.py  README.md  requirements.txt
phase1-sandbox/scripts/: publish_loop.sh
phase1-sandbox/tests/: conftest.py  test_forecast_ml.py  test_forecast_optimize.py  test_metadata_schema.py  test_profiles.py  test_rtsp_stream.py  test_schemas.py  test_synth_counts.py  test_synth_signals.py
phase2-feasibility/: README.md
phase2-feasibility/configs/: classifier_thresholds.yml
phase2-feasibility/docs/: architecture.md  data_flow.md  isolation_proof.md
phase2-feasibility/tests/: test_classifier.py  test_ingest_layer.py  test_zones.py
phase3-fullstack/: README.md
phase3-fullstack/configs/: mediamtx.yml  wadi_saqra.json  wadi_saqra_zones.json
phase3-fullstack/docs/: ALGORITHMS.md  DASHBOARD_V2.md  FEATURES_AND_ALGORITHMS.md  FINAL_REPORT.md  HANDBOOK_DELIVERABLE.md  HANDOVER.md  MCP_TOOLS.md  USER_GUIDE.md  architecture.md  data-model.md  limitations.md  module-contracts.md  open-source-components.md  reproducibility.md  security_and_isolation.md
phase3-fullstack/scripts/: assert_no_outbound_writes.sh  backfill_forecast_score.py  bench_detectors.py  build_calibration_pack.py  build_signal_timing_log.py  measure_counts.py  run_full_stack.sh  run_rtsp.sh
scripts/: package.json  tsconfig.json  week1-validation.ts
server/: package.json  tsconfig.json
server/src/: config.ts  index.ts  server.ts  types.d.ts
tests/phase3/: conftest.py  test_auth_rbac.py  test_bus_asyncio.py  test_counter_lanes.py  test_counter_pce.py  (+15 more)
tools/: build_typical_day_json.py
week1_9xai21/: sunday-plan.md  thursday-reflection.md
week2_9xai21/: sunday-plan.md  thursday-reflection.md
week3_9xai21/: thursday-reflection-swarm.md  thursday-reflection.md
(+208 files in other folders)
