[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-intel"
version = "0.1.0"
description = "AI-based traffic monitoring and flow forecasting — first-site intelligence build (9XAI Hackathon)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "traffic-intel" }]
dependencies = [
    # Ingest
    "yt-dlp>=2026.1.1",
    # Data & schemas
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    # Video / CV utilities
    "opencv-python-headless>=4.9",
    # HTTP (for CVAT REST seeding)
    "requests>=2.31",
    # CLI ergonomics
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
llm = [
    # LLM advisor (opt-in via ANTHROPIC_API_KEY at runtime).
    # Without this extra installed and the env var set, the chat endpoint
    # returns 503 and no outbound calls happen — see §7.7.
    "anthropic>=0.40",
]
kafka = [
    "aiokafka>=0.11",
]
rabbitmq = [
    "aio-pika>=9.4",
]

[project.scripts]
sandbox-fetch        = "traffic_intel_sandbox.ingest.youtube_fetch:main"
sandbox-normalize    = "traffic_intel_sandbox.ingest.normalize:main"
sandbox-clip         = "traffic_intel_sandbox.ingest.clip_cutter:main"
sandbox-stationary   = "traffic_intel_sandbox.ingest.stationary_extractor:main"
sandbox-stabilize    = "traffic_intel_sandbox.ingest.stabilize:main"
sandbox-stream-check = "traffic_intel_sandbox.rtsp_sim.healthcheck:main"
sandbox-counts       = "traffic_intel_sandbox.synth.detector_counts:main"
sandbox-signals      = "traffic_intel_sandbox.synth.signal_logs:main"
sandbox-validate     = "traffic_intel_sandbox.metadata.validator:main"
sandbox-seed-cvat    = "traffic_intel_sandbox.annotation.seed_cvat:main"
sandbox-viewer       = "traffic_intel_sandbox.viewer:main"
phase2-detect        = "traffic_intel_phase2.detect_track:main"
phase2-classify      = "traffic_intel_phase2.classifier:main"
forecast-ml-train    = "forecast_ml.train:main"
forecast-ml-predict  = "forecast_ml.predict:main"

[tool.setuptools.packages.find]
where = ["phase1-sandbox/src", "phase2-feasibility/src", "phase3-fullstack/src"]

[tool.pytest.ini_options]
testpaths = ["phase1-sandbox/tests", "phase2-feasibility/tests", "tests/phase3"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "requires_stream: test needs a live RTSP stream",
    "requires_network: test needs external network",
    "requires_docker: test needs docker daemon",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","W","I","N","UP","B","SIM","RUF"]
ignore = ["E501"]
